webapp-color/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-color-v2
  namespace: default
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-color
  template:
    metadata:
      labels:
        app: webapp-color
        version: v2
    spec:
      containers:
      - name: webapp-color
        image: kodekloud/webapp-color
        imagePullPolicy: Always
