webapp-color/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-color-svc
  namespace: default
spec:
  selector:
    app: webapp-color
  ports:
    - targetPort: 8080
      port: 8080
